--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> <title>Todo: Replace with generated HTML file.</title> </head> <body> <h1>Hello World</h1> </body> </html>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8"> <title>Replace me</title> </head> <body> <h1>Todo: Replace with generated HTML file.</h1> </body> </html>
